--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@angular/service-worker": "~13.0.0",
     "@firebase/auth": "^0.19.3",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0-beta.4",
     "all": "^0.0.0",
     "bootstrap": "^4.6.0",
-    "firebase": "^9.5.0",
+    "firebase": "^9.6.0",
     "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
