--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "~13.0.0",
     "@firebase/auth": "^0.19.3",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0-beta.4",
+    "@popperjs/core": "^2.11.0",
     "all": "^0.0.0",
     "bootstrap": "^4.6.0",
     "firebase": "^9.6.0",
